@@ -25,10 +25,10 @@
 <a href="OptionalTasks/echoproperties.html">Echoproperties</a><br>
 <a href="OptionalTasks/ftp.html">FTP</a><br>
 <a href="OptionalTasks/icontract.html">IContract</a><br>
-<a href="OptionalTasks/jarlib-available.html">jarlib-available</a><br>
-<a href="OptionalTasks/jarlib-display.html">jarlib-display</a><br>
-<a href="OptionalTasks/jarlib-manifest.html">jarlib-manifest</a><br>
-<a href="OptionalTasks/jarlib-resolve.html">jarlib-resolve</a><br>
+<a href="OptionalTasks/jarlib-available.html">Jarlib-available</a><br>
+<a href="OptionalTasks/jarlib-display.html">Jarlib-display</a><br>
+<a href="OptionalTasks/jarlib-manifest.html">Jarlib-manifest</a><br>
+<a href="OptionalTasks/jarlib-resolve.html">Jarlib-resolve</a><br>
 <a href="OptionalTasks/javacc.html">JavaCC</a><br>
 <a href="OptionalTasks/javah.html">Javah</a><br>
 <a href="OptionalTasks/jspc.html">JspC</a><br>
