@@ -369,7 +369,8 @@ Other changes:
 
 * New tasks <replaceregexp>, <checksum>, <translate>, <waitfor>,
   <manifest>, <vsscp>, <vssadd>, <vsscreate>, <splash>, <basename>, <dirname>,
-  <concat>.
+  <concat>, <sourceoffsite>, <jarlib-available>, <jarlib-display>,
+  <jarlib-manifest>, <jarlib-resolve>.
 
 * A new combined <mail> task, which replaces the old <mail> and
   <mimemail> tasks, has been added.  The <mimemail> task, and
